modify some pages

--- a/frontend/src/assets/game/layout.scss
+++ b/frontend/src/assets/game/layout.scss
@@ -1,7 +1,7 @@
 .gamehome-container {
    width: 100%;
    height: 100%;
-   background-image: url('../../assets/game/background.jpg');
+   background-image: url('../../assets/game/9286153.jpg');
    background-size: cover;
    overflow: hidden;
 }
