--- a/frontend/src/components/game/lobby.scss
+++ b/frontend/src/components/game/lobby.scss
@@ -11,7 +11,7 @@
    .eventlist-container {
       width: 75%;
       height: 100%;
-      text-align: center;
+      text-align: center !important;
       .list-container {
          width: 100%;
          height: calc(100% - 89px);
@@ -63,7 +63,7 @@
    .ranking-container {
       width: 25%;
       height: 100%;
-      background-color: #00000095;
+      background-color: #000000b7;
 
       h2 {
          color: #ffffff;
@@ -119,20 +119,20 @@
    .avatar-container {
       position: absolute;
       text-align: center;
-      background-color: #572821d4;
-      padding: 30px 80px;
+      background-color: #000000b7;
+      padding: 10px 50px;
       border-radius: 50% 50%;
       left: 30px;
       bottom: 30px;
       cursor: pointer;
 
       img {
-         width: 150px;
+         width: 100px;
       }
       p {
          color: #fff;
          padding: 0;
-         font-size: 30px;
+         font-size: 20px;
          font-weight: 900;
       }
    }
