--- a/frontend/src/components/game/battle.scss
+++ b/frontend/src/components/game/battle.scss
@@ -8,6 +8,8 @@
       width: 10%;
       height: 100%;
       padding: 20px;
+      position: absolute;
+      z-index: 1;
 
       .menu-list {
          width: 100%;
@@ -104,7 +106,7 @@
    }
 
    .center {
-      width: 65%;
+      width: 100%;
       height: 100%;
    }
 
