--- a/frontend/src/components/game/battle.scss
+++ b/frontend/src/components/game/battle.scss
@@ -139,7 +139,6 @@
          }
 
          .bar-outer {
-            margin-left: 10px;
             width: 100%;
             height: 15px;
             border-radius: 10px;
@@ -147,6 +146,7 @@
 
             .bar {
                height: 100%;
+               width: 100%;
                border-radius: 10px;
                background-color: #b61010;
             }
