--- a/frontend/src/components/game/user.scss
+++ b/frontend/src/components/game/user.scss
@@ -98,6 +98,7 @@
             display: flex;
             flex-wrap: wrap;
             .badge-item {
+               cursor: pointer;
                width: 50px;
                margin: 15px;
             }
