--- a/frontend/src/components/game/battle.scss
+++ b/frontend/src/components/game/battle.scss
@@ -134,96 +134,96 @@
          }
       }
    }
+}
 
-   .battle-right-info {
-      max-width: 40%;
-      height: 35%;
+.battle-right-info {
+   max-width: 30%;
+   height: 90%;
+   display: flex;
+   flex-direction: column;
+   position: fixed;
+   text-align: center;
+   padding: 20px;
+   right: 0;
+   z-index: 0;
+}
+
+.monster-container {
+   background-color: #000000b7;
+   border-radius: 15px;
+   padding: 20px;
+   width: 100%;
+   height: 30%;
+
+   .bar-container {
+      color: #fff;
+      width: 80%;
+      height: 20%;
       display: flex;
-      flex-direction: column;
-      position: absolute;
-      background-color: #000000b7;
-      border-radius: 15px;
-      text-align: center;
-      padding: 20px;
-      right: 20px;
-      top: 20px;
+      justify-content: center;
+      align-items: center;
+      position: relative;
+      left: 50%;
+      transform: translateX(-50%);
 
-      .bar-container {
-         color: #fff;
-         width: 80%;
-         display: flex;
-         justify-content: center;
-         align-items: center;
-         position: relative;
-         left: 50%;
-         transform: translateX(-50%);
+      h4 {
+         font-size: 24px;
+         margin-right: 15px;
+      }
 
-         h4 {
-            font-size: 24px;
-            margin-right: 15px;
-         }
+      .bar-outer {
+         width: 100%;
+         height: 15px;
+         border-radius: 10px;
+         background-color: #333333;
 
-         .bar-outer {
-            width: 100%;
-            height: 15px;
+         .bar {
+            width: 0;
+            height: 100%;
             border-radius: 10px;
-            background-color: #333333;
-
-            .bar {
-               height: 100%;
-               width: 100%;
-               border-radius: 10px;
-               background-color: #ffc21b;
-            }
+            background-color: #ffc21b;
          }
       }
+   }
 
-      .icon-button {
-         text-align: left;
-         cursor: pointer;
-      }
+   .img-container {
+      height: 80%;
+      margin-bottom: 20px;
+      display: flex;
 
-      .img-container {
-         height: 70%;
-         margin-bottom: 20px;
-         display: flex;
-
-         .team {
-            display: flex;
-
-            .other {
-               width: 20%;
-            }
-            .user {
-               width: 80%;
-               height: 100%;
-
-               img {
-                  width: auto;
-                  height: 100%;
-               }
-            }
-         }
-         .monster {
-            width: 100%;
-            img {
-               width: 100%;
-               max-height: 100%;
-            }
+      .monster {
+         width: 100%;
+         img {
+            width: auto;
+            height: 100%;
          }
       }
    }
 }
 
-.bag-button {
-   position: absolute;
-   right: 20px;
-   top: 40%;
-   width: 80px;
-   cursor: pointer;
+.team-container {
+   display: grid;
+   grid-template-columns: repeat(2, 1fr);
+   gap: 20px;
+   width: 70%;
+   align-self: flex-end;
+   direction: rtl;
+}
 
-   img {
-      width: 100%;
-      height: auto;
+.bag-container {
+   height: 10%;
+   display: flex;
+   align-items: center;
+
+   .bag-button {
+      position: absolute;
+      width: 80px;
+      right: 20px;
+      cursor: pointer;
+
+      img {
+         width: 100%;
+         height: auto;
+      }
    }
 }
