--- a/frontend/src/components/game/battle.scss
+++ b/frontend/src/components/game/battle.scss
@@ -137,7 +137,7 @@
 }
 
 .battle-right-info {
-   max-width: 30%;
+   max-width: 20%;
    height: 90%;
    display: flex;
    flex-direction: column;
@@ -158,7 +158,6 @@
    .bar-container {
       color: #fff;
       width: 80%;
-      height: 20%;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -208,9 +207,17 @@
    width: 70%;
    align-self: flex-end;
    direction: rtl;
+
+   .user-item {
+      img {
+         width: auto;
+         height: 60px;
+      }
+   }
 }
 
 .bag-container {
+   margin: 20px 0;
    height: 10%;
    display: flex;
    align-items: center;
