--- a/frontend/src/components/game/battle.scss
+++ b/frontend/src/components/game/battle.scss
@@ -9,8 +9,9 @@
 
    .side-menu {
       width: 10%;
-      height: 100%;
+      height: 100vh;
       padding: 20px;
+      overflow: hidden;
       position: absolute;
       z-index: 1;
 
